--- a/web-app/src/locales/pt.json
+++ b/web-app/src/locales/pt.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "abc": {
     "no_revenue": "Nenhuma receita gerada neste período.",
     "not_enough_data": "Dados de vendas insuficientes para a análise ABC."
@@ -315,6 +315,10 @@
     "no_alerts": "Nenhum alerta",
     "no_anomalies": "Nenhuma aLast Namealia detetada",
     "no_rules": "Nenhuma regra configurada",
+    "rule_desc_dormant": "Detects products not sold in the last 30 days.",
+    "rule_desc_low_stock": "Alert when a product falls below a defined threshold.",
+    "rule_desc_out_of_stock": "Immediate alert when quantity reaches zero.",
+    "rule_desc_overstock": "Alert when stock exceeds the recommended capacity.",
     "rule_dormant": "Produto inativo",
     "rule_low_stock": "Stock baixo",
     "rule_out_of_stock": "Esgotado",
@@ -503,6 +507,9 @@
     "info": "Info",
     "items_count": "{{count}} artigo(s)",
     "language_choice": "Escolher idioma",
+    "last_30_days": "Últimos 30 dias",
+    "last_7_days": "Últimos 7 dias",
+    "last_90_days": "Últimos 90 dias",
     "loading": "A carregar...",
     "merchant": "Comerciante",
     "months_ago": "há {{count}} meses",
@@ -542,10 +549,7 @@
     "weeks_ago": "há {{count}} semanas",
     "years_ago": "há {{count}} anos",
     "yes": "Sim",
-    "yesterday": "Ontem",
-    "last_7_days": "Últimos 7 dias",
-    "last_30_days": "Últimos 30 dias",
-    "last_90_days": "Últimos 90 dias"
+    "yesterday": "Ontem"
   },
   "crm": {
     "active_30d": "Ativos (30d)",
@@ -697,7 +701,10 @@
     "abc_analysis": "Análise ABC (Prioridades)",
     "admin_messages": "Mensagens do administrador",
     "ai_daily_summary": "Resumo diário de IA",
+    "ai_forecast_title": "AI Sales Forecast",
     "ai_tap_to_generate": "Toque para gerar",
+    "all_good": "Everything is up to date — no issues detected",
+    "anomalies_detected": "{{count}} anomalies detected",
     "category_distribution": "Distribuição por Categoria",
     "class_a": "Class A",
     "class_a_desc": "80% da sua receita",
@@ -705,6 +712,11 @@
     "class_b_desc": "15% da sua receita",
     "class_c": "Class C",
     "class_c_desc": "5% da sua receita",
+    "col_action": "Action",
+    "col_amount": "Amount",
+    "col_items": "Items",
+    "col_ref": "Ref.",
+    "col_time": "Time",
     "count_btn": "Contar",
     "count_stock": "Contar stock",
     "count_stock_prompt": "Insira a quantidade real para",
@@ -718,33 +730,53 @@
     "expected_qty": "Attendu: {{qty}}",
     "expired": "Expirado!",
     "expiry_alerts": "Alertas de Validade (30d)",
+    "forecast_actual": "Actual",
+    "forecast_confidence": "Confidence: 94%",
+    "forecast_predicted": "Forecast",
     "generate_tasks": "Gerar novas tarefas",
     "greeting": "Olá, {{name}}",
+    "guide_forecast_content": "Our AI analyses your data to predict future sales.",
+    "guide_forecast_title": "AI Forecast",
+    "guide_kpi_content": "Track your revenue, sales count and stock value in real time.",
+    "guide_kpi_title": "Key Indicators (KPI)",
+    "guide_reminders_content": "Get personalised AI advice and urgent action reminders.",
+    "guide_welcome_content": "Monitor your business health at a glance.",
+    "guide_welcome_title": "Welcome to your Dashboard",
     "history": "History",
     "history_btn": "Histórico",
+    "items_abbrev": "items",
     "low_stock": "Stock baixo",
     "month_revenue": "Monthly Sales",
     "movements_30d": "Movimentos (30 dias)",
     "movements_history": "Histórico de movimentos",
     "net": "Líquido",
+    "no_forecast_data": "Not enough sales data to generate a forecast",
     "no_movements": "Sem movimento",
+    "no_stock_data": "No stock data available for this period",
     "normal": "Normal",
     "order_btn": "Encomendar",
     "orders_section": "Encomendas",
     "out_of_stock": "Esgotado",
     "overstock": "Excesso de stock",
     "pending_orders": "Pendentes",
+    "period_history": "{{count}}d history",
     "preferences_error": "Could not update your preferences.",
     "products_count_one": "{{count}} produto",
     "products_count_other": "{{count}} produtos",
     "profitability_analysis": "Análise de rentabilidade",
     "recent_alerts": "Alertas recentes",
     "recent_sales": "Vendas recentes",
+    "reminder_alerts": "{{count}} alert(s)",
+    "reminder_products": "{{count}} product(s)",
+    "reminder_products_low": "{{count}} product(s) below threshold",
+    "reminder_products_overstock": "{{count}} product(s) in excess",
+    "reminder_sales": "{{count}} sale(s)",
     "reorder_stock_meta": "Stock: {{current}} (Seuil: {{threshold}})",
     "reorder_suggested": "Suggéré: +{{qty}}",
     "rotating_inventory": "Inventário Rotativo",
     "see_detail_product": "Ver detalhe por produto",
     "see_feature": "Ver esta funcionalidade",
+    "see_full_report": "See full report",
     "see_less": "Ver menos",
     "see_more": "Ver mais",
     "see_more_count": "Ver outros {{count}} produtos críticos",
@@ -758,10 +790,12 @@
     "stats": "Estatísticas",
     "status_distribution": "Distribuição de estado",
     "stock_by_category": "Stock por categoria",
+    "stock_distribution": "Stock Distribution",
     "stock_evolution": "Evolução do valor do stock (7d)",
     "stock_label": "Stock",
     "stock_status": "Estado do stock",
     "stock_value": "Valor do stock",
+    "stock_value_evolution": "Stock Value Evolution",
     "sub_greeting": "Aqui está o estado do seu stock",
     "suggestions_reorder": "Sugestões de reabastecimento",
     "threshold": "Limite",
@@ -772,6 +806,9 @@
     "top_products_value": "Top produtos (valor)",
     "total_value": "Valor total",
     "units": "unidades",
+    "unread_alerts_label": "Unread alerts",
+    "view_receipt": "View receipt",
+    "visible_sections": "Visible sections",
     "widget_abc_analysis": "Analyse ABC",
     "widget_category_chart": "Répartition par catégorie",
     "widget_expiry_alerts": "Alertes péremption",
@@ -1233,14 +1270,14 @@
     "price_range": "Faixa de preço",
     "products": "Produtos",
     "reset": "Reiniciar",
+    "search_placeholder": "Search for products or suppliers...",
     "search_product": "Pesquisar um produto...",
     "search_supplier": "Pesquisar um fornecedor...",
     "send_invitation": "Enviar convite",
     "star": "⭐",
     "suppliers": "Fornecedores Marketplace",
     "title": "Marketplace",
-    "verified_only": "Apenas verificados",
-    "search_placeholder": "Search for products or suppliers..."
+    "verified_only": "Apenas verificados"
   },
   "modals": {
     "cancel": "Cancelar",
@@ -1813,6 +1850,20 @@
     "users_permissions_desc": "Gira os acessos dos seus funcionários",
     "version": "Versão"
   },
+  "sidebar": {
+    "abc_analysis": "ABC Analysis",
+    "expiry": "Expiry",
+    "messages": "Messages",
+    "multi_stores": "Multi-Stores",
+    "my_suppliers": "My Suppliers",
+    "pos": "Sales (POS)",
+    "staff": "Staff",
+    "stock_history": "Stock History",
+    "stock_inventory": "Stock & Inventory",
+    "supplier_portal": "Supplier Portal",
+    "system": "System",
+    "system_history": "System History"
+  },
   "stock": {
     "reasons": {
       "pos_sale": "POS Sale",
@@ -1912,24 +1963,24 @@
     "dashboard": "Painel do Fornecedor",
     "delivery_zones": "Zonas de entrega",
     "min_order": "Enc. mín.",
-    "order_id": "Código da encomenda",
-    "orders": "Encomendas recebidas",
-    "pending_orders": "Encomendas pendentes",
-    "refuse": "Recusar",
-    "revenue_month": "Revenue this month",
-    "reviews": "Avaliações de clientes",
-    "ship": "Expedir",
-    "top_products": "Top Produtos",
-    "unavailable": "Indisponível",
     "no_orders": "No orders found",
     "order_date": "Order Date",
     "order_details": "Order Details",
+    "order_id": "Código da encomenda",
     "order_items": "Items",
     "order_status": "Status",
     "order_summary": "Summary",
     "order_total": "Total",
+    "orders": "Encomendas recebidas",
     "orders_history": "Order History",
-    "search_orders": "Search orders..."
+    "pending_orders": "Encomendas pendentes",
+    "refuse": "Recusar",
+    "revenue_month": "Revenue this month",
+    "reviews": "Avaliações de clientes",
+    "search_orders": "Search orders...",
+    "ship": "Expedir",
+    "top_products": "Top Produtos",
+    "unavailable": "Indisponível"
   },
   "supplier_old": {
     "active_clients": "Clientes ativos",
@@ -1955,6 +2006,8 @@
     "commercial_profile": "Profil commercial",
     "company_name_label": "Company Name *",
     "company_name_ph": "Company Name",
+    "contact_email": "Contact Email",
+    "contact_phone": "Contact Phone",
     "create_profile": "Create Profile",
     "days": "days",
     "description_label": "Description",
@@ -1977,9 +2030,7 @@
     "reviews": "avis",
     "role_supplier": "Supplier",
     "zones_label": "Delivery Zones (comma separated)",
-    "zones_ph": "City center, suburb...",
-    "contact_email": "Contact Email",
-    "contact_phone": "Contact Phone"
+    "zones_ph": "City center, suburb..."
   },
   "suppliers": {
     "add_invoice_feature": "Função de upload em breve",
