--- a/web-app/src/locales/ro.json
+++ b/web-app/src/locales/ro.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "abc": {
     "no_revenue": "No revenue generated during this period.",
     "not_enough_data": "Pas assez de données de vente pour l’analyse ABC."
@@ -315,6 +315,10 @@
     "no_alerts": "No alerts",
     "no_anomalies": "No aLast Namealies detected",
     "no_rules": "No rules configured",
+    "rule_desc_dormant": "Detects products not sold in the last 30 days.",
+    "rule_desc_low_stock": "Alert when a product falls below a defined threshold.",
+    "rule_desc_out_of_stock": "Immediate alert when quantity reaches zero.",
+    "rule_desc_overstock": "Alert when stock exceeds the recommended capacity.",
     "rule_dormant": "Dormant product",
     "rule_low_stock": "Stock bas",
     "rule_out_of_stock": "Rupture de stock",
@@ -503,6 +507,9 @@
     "info": "Info",
     "items_count": "{{count}} element(e)",
     "language_choice": "Alege limba",
+    "last_30_days": "Ultimele 30 de zile",
+    "last_7_days": "Ultimele 7 zile",
+    "last_90_days": "Ultimele 90 de zile",
     "loading": "Se încarcă...",
     "merchant": "Merchant",
     "months_ago": "{{count}} months ago",
@@ -542,10 +549,7 @@
     "weeks_ago": "{{count}} weeks ago",
     "years_ago": "{{count}} years ago",
     "yes": "Yes",
-    "yesterday": "Yesterday",
-    "last_7_days": "Ultimele 7 zile",
-    "last_30_days": "Ultimele 30 de zile",
-    "last_90_days": "Ultimele 90 de zile"
+    "yesterday": "Yesterday"
   },
   "crm": {
     "active_30d": "Active (30d)",
@@ -697,7 +701,10 @@
     "abc_analysis": "ABC Analysis (Priorities)",
     "admin_messages": "Administrator messages",
     "ai_daily_summary": "AI Daily Summary",
+    "ai_forecast_title": "AI Sales Forecast",
     "ai_tap_to_generate": "Tap to generate",
+    "all_good": "Everything is up to date — no issues detected",
+    "anomalies_detected": "{{count}} anomalies detected",
     "category_distribution": "Category Distribution",
     "class_a": "Class A",
     "class_a_desc": "80% of your revenue",
@@ -705,6 +712,11 @@
     "class_b_desc": "15% of your revenue",
     "class_c": "Class C",
     "class_c_desc": "5% of your revenue",
+    "col_action": "Action",
+    "col_amount": "Amount",
+    "col_items": "Items",
+    "col_ref": "Ref.",
+    "col_time": "Time",
     "count_btn": "Count",
     "count_stock": "Count stock",
     "count_stock_prompt": "Enter actual quantity for",
@@ -718,33 +730,53 @@
     "expected_qty": "Attendu: {{qty}}",
     "expired": "Expired!",
     "expiry_alerts": "Expiry Alerts (30d)",
+    "forecast_actual": "Actual",
+    "forecast_confidence": "Confidence: 94%",
+    "forecast_predicted": "Forecast",
     "generate_tasks": "Generate new tasks",
     "greeting": "Bună ziua, {{name}}",
+    "guide_forecast_content": "Our AI analyses your data to predict future sales.",
+    "guide_forecast_title": "AI Forecast",
+    "guide_kpi_content": "Track your revenue, sales count and stock value in real time.",
+    "guide_kpi_title": "Key Indicators (KPI)",
+    "guide_reminders_content": "Get personalised AI advice and urgent action reminders.",
+    "guide_welcome_content": "Monitor your business health at a glance.",
+    "guide_welcome_title": "Welcome to your Dashboard",
     "history": "Istoric",
     "history_btn": "History",
+    "items_abbrev": "items",
     "low_stock": "Stoc scăzut",
     "month_revenue": "Monthly Sales",
     "movements_30d": "Movements (30 days)",
     "movements_history": "Movements history",
     "net": "Net",
+    "no_forecast_data": "Not enough sales data to generate a forecast",
     "no_movements": "No movement",
+    "no_stock_data": "No stock data available for this period",
     "normal": "Normal",
     "order_btn": "Order",
     "orders_section": "Orders",
     "out_of_stock": "Stoc epuizat",
     "overstock": "Suprastoc",
     "pending_orders": "Pending",
+    "period_history": "{{count}}d history",
     "preferences_error": "Could not update your preferences.",
     "products_count_one": "{{count}} product",
     "products_count_other": "{{count}} products",
     "profitability_analysis": "Analiză rentabilitate",
     "recent_alerts": "Alte recente",
     "recent_sales": "Recent Sales",
+    "reminder_alerts": "{{count}} alert(s)",
+    "reminder_products": "{{count}} product(s)",
+    "reminder_products_low": "{{count}} product(s) below threshold",
+    "reminder_products_overstock": "{{count}} product(s) in excess",
+    "reminder_sales": "{{count}} sale(s)",
     "reorder_stock_meta": "Stock: {{current}} (Seuil: {{threshold}})",
     "reorder_suggested": "Suggéré: +{{qty}}",
     "rotating_inventory": "Rotating Inventory",
     "see_detail_product": "See detail by product",
     "see_feature": "See this feature",
+    "see_full_report": "See full report",
     "see_less": "Vezi mai puțin",
     "see_more": "Vezi mai mult",
     "see_more_count": "See {{count}} other critical products",
@@ -758,10 +790,12 @@
     "stats": "Statistics",
     "status_distribution": "Status distribution",
     "stock_by_category": "Stock by category",
+    "stock_distribution": "Stock Distribution",
     "stock_evolution": "Evoluția valorii stocului (7z)",
     "stock_label": "Stock",
     "stock_status": "Starea stocului",
     "stock_value": "Valoare stoc",
+    "stock_value_evolution": "Stock Value Evolution",
     "sub_greeting": "Iată starea stocului dvs.",
     "suggestions_reorder": "Reorder Suggestions",
     "threshold": "Threshold",
@@ -772,6 +806,9 @@
     "top_products_value": "Top products (value)",
     "total_value": "Total value",
     "units": "units",
+    "unread_alerts_label": "Unread alerts",
+    "view_receipt": "View receipt",
+    "visible_sections": "Visible sections",
     "widget_abc_analysis": "Analyse ABC",
     "widget_category_chart": "Répartition par catégorie",
     "widget_expiry_alerts": "Alertes péremption",
@@ -1233,14 +1270,14 @@
     "price_range": "Interval de preț",
     "products": "Produse",
     "reset": "Resetează",
+    "search_placeholder": "Search for products or suppliers...",
     "search_product": "Caută un produs...",
     "search_supplier": "Caută un furnizor...",
     "send_invitation": "Trimite invitație",
     "star": "⭐",
     "suppliers": "Furnizori din Marketplace",
     "title": "Marketplace",
-    "verified_only": "Doar verificați",
-    "search_placeholder": "Search for products or suppliers..."
+    "verified_only": "Doar verificați"
   },
   "modals": {
     "cancel": "Anulare",
@@ -1808,6 +1845,20 @@
     "users_permissions_desc": "Manage your employees' access",
     "version": "Versiune"
   },
+  "sidebar": {
+    "abc_analysis": "ABC Analysis",
+    "expiry": "Expiry",
+    "messages": "Messages",
+    "multi_stores": "Multi-Stores",
+    "my_suppliers": "My Suppliers",
+    "pos": "Sales (POS)",
+    "staff": "Staff",
+    "stock_history": "Stock History",
+    "stock_inventory": "Stock & Inventory",
+    "supplier_portal": "Supplier Portal",
+    "system": "System",
+    "system_history": "System History"
+  },
   "stock": {
     "reasons": {
       "pos_sale": "POS Sale",
@@ -1907,24 +1958,24 @@
     "dashboard": "Panou furnizor",
     "delivery_zones": "Zone de livrare",
     "min_order": "Comandă min.",
-    "order_id": "Order ID",
-    "orders": "Comenzi primite",
-    "pending_orders": "Comenzi în așteptare",
-    "refuse": "Refuză",
-    "revenue_month": "Venit luna aceasta",
-    "reviews": "Recenzii clienți",
-    "ship": "Expediază",
-    "top_products": "Produse de top",
-    "unavailable": "Indisponibil",
     "no_orders": "No orders found",
     "order_date": "Order Date",
     "order_details": "Order Details",
+    "order_id": "Order ID",
     "order_items": "Items",
     "order_status": "Status",
     "order_summary": "Summary",
     "order_total": "Total",
+    "orders": "Comenzi primite",
     "orders_history": "Order History",
-    "search_orders": "Search orders..."
+    "pending_orders": "Comenzi în așteptare",
+    "refuse": "Refuză",
+    "revenue_month": "Venit luna aceasta",
+    "reviews": "Recenzii clienți",
+    "search_orders": "Search orders...",
+    "ship": "Expediază",
+    "top_products": "Produse de top",
+    "unavailable": "Indisponibil"
   },
   "supplier_old": {
     "active_clients": "Active Clients",
@@ -1950,6 +2001,8 @@
     "commercial_profile": "Profil commercial",
     "company_name_label": "Company Name *",
     "company_name_ph": "Company Name",
+    "contact_email": "Contact Email",
+    "contact_phone": "Contact Phone",
     "create_profile": "Create Profile",
     "days": "days",
     "description_label": "Description",
@@ -1972,9 +2025,7 @@
     "reviews": "avis",
     "role_supplier": "Supplier",
     "zones_label": "Delivery Zones (comma separated)",
-    "zones_ph": "City center, suburb...",
-    "contact_email": "Contact Email",
-    "contact_phone": "Contact Phone"
+    "zones_ph": "City center, suburb..."
   },
   "suppliers": {
     "add_invoice_feature": "Upload feature coming soon",
