--- a/web-app/src/locales/wo.json
+++ b/web-app/src/locales/wo.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "abc": {
     "no_revenue": "No revenue generated during this period.",
     "not_enough_data": "Pas assez de données de vente pour l’analyse ABC."
@@ -315,6 +315,10 @@
     "no_alerts": "Amul xam-xam",
     "no_anomalies": "Amul aLast Nameali",
     "no_rules": "Amul règl bu ñu teg",
+    "rule_desc_dormant": "Detects products not sold in the last 30 days.",
+    "rule_desc_low_stock": "Alert when a product falls below a defined threshold.",
+    "rule_desc_out_of_stock": "Immediate alert when quantity reaches zero.",
+    "rule_desc_overstock": "Alert when stock exceeds the recommended capacity.",
     "rule_dormant": "Liggéey yu nelaw",
     "rule_low_stock": "Stock bu néew",
     "rule_out_of_stock": "Jeex",
@@ -503,6 +507,9 @@
     "info": "Xamle",
     "items_count": "{{count}} liggéey",
     "language_choice": "Tann làmmeñ bi",
+    "last_30_days": "30 fan bi lépp",
+    "last_7_days": "7 fan bi lépp",
+    "last_90_days": "90 fan bi lépp",
     "loading": "Xaaral...",
     "merchant": "Jaaykat",
     "months_ago": "{{count}} weer ci gannaaw",
@@ -542,10 +549,7 @@
     "weeks_ago": "{{count}} ay-simen ci gannaaw",
     "years_ago": "{{count}} at ci gannaaw",
     "yes": "Waaw",
-    "yesterday": "Demb",
-    "last_7_days": "7 fan bi lépp",
-    "last_30_days": "30 fan bi lépp",
-    "last_90_days": "90 fan bi lépp"
+    "yesterday": "Demb"
   },
   "crm": {
     "active_30d": "Yu dox (30b)",
@@ -697,7 +701,10 @@
     "abc_analysis": "ABC Analysis (Priorities)",
     "admin_messages": "Bataaxalu njiit yi",
     "ai_daily_summary": "AI Daily Summary",
+    "ai_forecast_title": "AI Sales Forecast",
     "ai_tap_to_generate": "Tap to generate",
+    "all_good": "Everything is up to date — no issues detected",
+    "anomalies_detected": "{{count}} anomalies detected",
     "category_distribution": "Seddale Xeet yi",
     "class_a": "Klàss A",
     "class_a_desc": "80% ci sa njeeg",
@@ -705,6 +712,11 @@
     "class_b_desc": "15% ci sa njeeg",
     "class_c": "Klàss C",
     "class_c_desc": "5% ci sa njeeg",
+    "col_action": "Action",
+    "col_amount": "Amount",
+    "col_items": "Items",
+    "col_ref": "Ref.",
+    "col_time": "Time",
     "count_btn": "Wañ",
     "count_stock": "Wañ stock",
     "count_stock_prompt": "Bind lim bu am ngir",
@@ -718,33 +730,53 @@
     "expected_qty": "Liñu yaakaar: {{qty}}",
     "expired": "Jeex na!",
     "expiry_alerts": "Xam-xam (Jeex)",
+    "forecast_actual": "Actual",
+    "forecast_confidence": "Confidence: 94%",
+    "forecast_predicted": "Forecast",
     "generate_tasks": "Génne liggéey yu bees",
     "greeting": "Dalal jamm, {{name}}",
+    "guide_forecast_content": "Our AI analyses your data to predict future sales.",
+    "guide_forecast_title": "AI Forecast",
+    "guide_kpi_content": "Track your revenue, sales count and stock value in real time.",
+    "guide_kpi_title": "Key Indicators (KPI)",
+    "guide_reminders_content": "Get personalised AI advice and urgent action reminders.",
+    "guide_welcome_content": "Monitor your business health at a glance.",
+    "guide_welcome_title": "Welcome to your Dashboard",
     "history": "History",
     "history_btn": "Jaar-jaar",
+    "items_abbrev": "items",
     "low_stock": "Néew na",
     "month_revenue": "Jaay weer wi",
     "movements_30d": "Doxaliin (30 fan)",
     "movements_history": "Jaar-jaaru doxaliin",
     "net": "Net",
+    "no_forecast_data": "Not enough sales data to generate a forecast",
     "no_movements": "Amul doxaliin",
+    "no_stock_data": "No stock data available for this period",
     "normal": "Normal",
     "order_btn": "Komànd",
     "orders_section": "Komànd yi",
     "out_of_stock": "Jeex na",
     "overstock": "Bare na",
     "pending_orders": "Xaar",
+    "period_history": "{{count}}d history",
     "preferences_error": "Could not update your preferences.",
     "products_count_one": "{{count}} liggéey",
     "products_count_other": "{{count}} liggéey",
     "profitability_analysis": "Saytu njaay mi",
     "recent_alerts": "Xam-xam yi mujj",
     "recent_sales": "Jaay yi mujj",
+    "reminder_alerts": "{{count}} alert(s)",
+    "reminder_products": "{{count}} product(s)",
+    "reminder_products_low": "{{count}} product(s) below threshold",
+    "reminder_products_overstock": "{{count}} product(s) in excess",
+    "reminder_sales": "{{count}} sale(s)",
     "reorder_stock_meta": "Stock: {{current}} (Seuil: {{threshold}})",
     "reorder_suggested": "Ndigal: +{{qty}}",
     "rotating_inventory": "Wañ Stock",
     "see_detail_product": "See detail by product",
     "see_feature": "Xool xarale bii",
+    "see_full_report": "See full report",
     "see_less": "See less",
     "see_more": "See more",
     "see_more_count": "Gis {{count}} yeneen liggéey",
@@ -758,10 +790,12 @@
     "stats": "Statistik",
     "status_distribution": "Seddale doxaliin",
     "stock_by_category": "Stock ci xeet",
+    "stock_distribution": "Stock Distribution",
     "stock_evolution": "Doxaliinu stock bi",
     "stock_label": "Stock",
     "stock_status": "État stock bi",
     "stock_value": "Njaay mi",
+    "stock_value_evolution": "Stock Value Evolution",
     "sub_greeting": "Here is your stock status",
     "suggestions_reorder": "Ndigal yokk stock",
     "threshold": "Threshold",
@@ -772,6 +806,9 @@
     "top_products_value": "Top products (value)",
     "total_value": "Njeeg yépp",
     "units": "bokk",
+    "unread_alerts_label": "Unread alerts",
+    "view_receipt": "View receipt",
+    "visible_sections": "Visible sections",
     "widget_abc_analysis": "Saytu ABC",
     "widget_category_chart": "Seddale ci xeet",
     "widget_expiry_alerts": "Xam-xam jeex",
@@ -1233,14 +1270,14 @@
     "price_range": "Njeeg bi",
     "products": "Liggéey yi",
     "reset": "Faraat",
+    "search_placeholder": "Search for products or suppliers...",
     "search_product": "Seetal benn liggéey...",
     "search_supplier": "Seetal benn jaaykatt...",
     "send_invitation": "Yónnee woowaanu",
     "star": "⭐",
     "suppliers": "Jaaykatt yi",
     "title": "Marketplace",
-    "verified_only": "Ñi wóor rekk",
-    "search_placeholder": "Search for products or suppliers..."
+    "verified_only": "Ñi wóor rekk"
   },
   "modals": {
     "cancel": "Cancel",
@@ -1808,6 +1845,20 @@
     "users_permissions_desc": "Saytu ñi am sañ-sañ",
     "version": "Version"
   },
+  "sidebar": {
+    "abc_analysis": "ABC Analysis",
+    "expiry": "Expiry",
+    "messages": "Messages",
+    "multi_stores": "Multi-Stores",
+    "my_suppliers": "My Suppliers",
+    "pos": "Sales (POS)",
+    "staff": "Staff",
+    "stock_history": "Stock History",
+    "stock_inventory": "Stock & Inventory",
+    "supplier_portal": "Supplier Portal",
+    "system": "System",
+    "system_history": "System History"
+  },
   "stock": {
     "reasons": {
       "pos_sale": "POS Sale",
@@ -1907,24 +1958,24 @@
     "dashboard": "Panoo Jaaykat",
     "delivery_zones": "Xare yu ñuy àttee",
     "min_order": "Komànd bu néew",
-    "order_id": "Code komànd",
-    "orders": "Komànd yu ñu jot",
-    "pending_orders": "Komànd yu xaar",
-    "refuse": "Bañ",
-    "revenue_month": "Njeeg weer wii",
-    "reviews": "Kaddu kilyan yi",
-    "ship": "Yónnee",
-    "top_products": "Liggéey yu siw",
-    "unavailable": "Amul",
     "no_orders": "No orders found",
     "order_date": "Order Date",
     "order_details": "Order Details",
+    "order_id": "Code komànd",
     "order_items": "Items",
     "order_status": "Status",
     "order_summary": "Summary",
     "order_total": "Total",
+    "orders": "Komànd yu ñu jot",
     "orders_history": "Order History",
-    "search_orders": "Search orders..."
+    "pending_orders": "Komànd yu xaar",
+    "refuse": "Bañ",
+    "revenue_month": "Njeeg weer wii",
+    "reviews": "Kaddu kilyan yi",
+    "search_orders": "Search orders...",
+    "ship": "Yónnee",
+    "top_products": "Liggéey yu siw",
+    "unavailable": "Amul"
   },
   "supplier_old": {
     "active_clients": "Kilyan yu dox",
@@ -1950,6 +2001,8 @@
     "commercial_profile": "Profil commercial",
     "company_name_label": "Company Name *",
     "company_name_ph": "Company Name",
+    "contact_email": "Contact Email",
+    "contact_phone": "Contact Phone",
     "create_profile": "Create Profile",
     "days": "days",
     "description_label": "Description",
@@ -1972,9 +2025,7 @@
     "reviews": "avis",
     "role_supplier": "Supplier",
     "zones_label": "Delivery Zones (comma separated)",
-    "zones_ph": "City center, suburb...",
-    "contact_email": "Contact Email",
-    "contact_phone": "Contact Phone"
+    "zones_ph": "City center, suburb..."
   },
   "suppliers": {
     "add_invoice_feature": "Upload feature coming soon",
