--- a/frontend/locales/ar.json
+++ b/frontend/locales/ar.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "abc": {
     "no_revenue": "No revenue generated during this period.",
     "not_enough_data": "Pas assez de données de vente pour l’analyse ABC."
@@ -141,7 +141,14 @@
     },
     "distribution": {
       "country": "التوزيع حسب البلد",
-      "role": "المستخدمون حسب الدور"
+      "plan": "Distribution par plan",
+      "plan_enterprise": "Enterprise",
+      "plan_pro": "Pro",
+      "plan_starter": "Starter",
+      "plan_trial": "Trial",
+      "role": "المستخدمون حسب الدور",
+      "signups_today": "Inscriptions aujourd'hui",
+      "trials_expiring": "Trials expirant (7j)"
     },
     "health": {
       "title": "صحة النظام",
@@ -503,6 +510,9 @@
     "info": "معلومات",
     "items_count": "{{count}} عنصر",
     "language_choice": "اختر اللغة",
+    "last_30_days": "Last 30 days",
+    "last_7_days": "Last 7 days",
+    "last_90_days": "Last 90 days",
     "loading": "جاري التحميل...",
     "merchant": "تاجر",
     "months_ago": "قبل {{count}} شهور",
