--- a/frontend/locales/ff.json
+++ b/frontend/locales/ff.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "abc": {
     "no_revenue": "Walaa ngalu heɓaa e ndee sahaa.",
     "not_enough_data": "Kabaruuji njeeygu mbeebaa ngam taskagol ABC."
@@ -141,7 +141,14 @@
     },
     "distribution": {
       "country": "Paasagol e leyɗe",
-      "role": "Huutorɓe e golle mum en"
+      "plan": "Distribution par plan",
+      "plan_enterprise": "Enterprise",
+      "plan_pro": "Pro",
+      "plan_starter": "Starter",
+      "plan_trial": "Trial",
+      "role": "Huutorɓe e golle mum en",
+      "signups_today": "Inscriptions aujourd'hui",
+      "trials_expiring": "Trials expirant (7j)"
     },
     "health": {
       "title": "Cellal System",
@@ -503,6 +510,9 @@
     "info": "Info",
     "items_count": "Piiji {{count}}",
     "language_choice": "Suɓaade ɗemngal",
+    "last_30_days": "Last 30 days",
+    "last_7_days": "Last 7 days",
+    "last_90_days": "Last 90 days",
     "loading": "Habbu...",
     "merchant": "Merchant",
     "months_ago": "lebbbi {{count}} jawnii",
