--- a/frontend/locales/hi.json
+++ b/frontend/locales/hi.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "abc": {
     "no_revenue": "No revenue generated during this period.",
     "not_enough_data": "Pas assez de données de vente pour l’analyse ABC."
@@ -141,7 +141,14 @@
     },
     "distribution": {
       "country": "देश के अनुसार वितरण",
-      "role": "भूमिका के अनुसार उपयोगकर्ता"
+      "plan": "Distribution par plan",
+      "plan_enterprise": "Enterprise",
+      "plan_pro": "Pro",
+      "plan_starter": "Starter",
+      "plan_trial": "Trial",
+      "role": "भूमिका के अनुसार उपयोगकर्ता",
+      "signups_today": "Inscriptions aujourd'hui",
+      "trials_expiring": "Trials expirant (7j)"
     },
     "health": {
       "title": "सिस्टम स्थिति",
@@ -503,6 +510,9 @@
     "info": "जानकारी",
     "items_count": "{{count}} आइटम",
     "language_choice": "भाषा चुनें",
+    "last_30_days": "Last 30 days",
+    "last_7_days": "Last 7 days",
+    "last_90_days": "Last 90 days",
     "loading": "लोड हो रहा है...",
     "merchant": "व्यापारी",
     "months_ago": "{{count}} महीने पहले",
