--- a/frontend/locales/it.json
+++ b/frontend/locales/it.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "abc": {
     "no_revenue": "Nessun ricavo generato in questo periodo.",
     "not_enough_data": "Dati di vendita insufficienti per l'analisi ABC."
@@ -141,7 +141,14 @@
     },
     "distribution": {
       "country": "Ripartizione per paese",
-      "role": "Utenti per ruolo"
+      "plan": "Distribution par plan",
+      "plan_enterprise": "Enterprise",
+      "plan_pro": "Pro",
+      "plan_starter": "Starter",
+      "plan_trial": "Trial",
+      "role": "Utenti per ruolo",
+      "signups_today": "Inscriptions aujourd'hui",
+      "trials_expiring": "Trials expirant (7j)"
     },
     "health": {
       "title": "Salute Sistema",
@@ -503,6 +510,9 @@
     "info": "Info",
     "items_count": "{{count}} articolo/i",
     "language_choice": "Scegli la lingua",
+    "last_30_days": "Last 30 days",
+    "last_7_days": "Last 7 days",
+    "last_90_days": "Last 90 days",
     "loading": "Caricamento...",
     "merchant": "Commerciante",
     "months_ago": "{{count}} months ago",
