--- a/frontend/locales/pl.json
+++ b/frontend/locales/pl.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "abc": {
     "no_revenue": "Brak przychodów w tym okresie.",
     "not_enough_data": "Niewystarczająca ilość danych do analizy ABC."
@@ -141,7 +141,14 @@
     },
     "distribution": {
       "country": "Podział według krajów",
-      "role": "Użytkownicy według ról"
+      "plan": "Distribution par plan",
+      "plan_enterprise": "Enterprise",
+      "plan_pro": "Pro",
+      "plan_starter": "Starter",
+      "plan_trial": "Trial",
+      "role": "Użytkownicy według ról",
+      "signups_today": "Inscriptions aujourd'hui",
+      "trials_expiring": "Trials expirant (7j)"
     },
     "health": {
       "title": "Stan Systemu",
@@ -503,6 +510,9 @@
     "info": "Info",
     "items_count": "{{count}} element(ów)",
     "language_choice": "Wybierz język",
+    "last_30_days": "Last 30 days",
+    "last_7_days": "Last 7 days",
+    "last_90_days": "Last 90 days",
     "loading": "Ładowanie...",
     "merchant": "Merchant",
     "months_ago": "{{count}} months ago",
