--- a/frontend/locales/ru.json
+++ b/frontend/locales/ru.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "abc": {
     "no_revenue": "No revenue generated during this period.",
     "not_enough_data": "Pas assez de données de vente pour l’analyse ABC."
@@ -141,7 +141,14 @@
     },
     "distribution": {
       "country": "Распределение по странам",
-      "role": "Пользователи по ролям"
+      "plan": "Distribution par plan",
+      "plan_enterprise": "Enterprise",
+      "plan_pro": "Pro",
+      "plan_starter": "Starter",
+      "plan_trial": "Trial",
+      "role": "Пользователи по ролям",
+      "signups_today": "Inscriptions aujourd'hui",
+      "trials_expiring": "Trials expirant (7j)"
     },
     "health": {
       "title": "Состояние системы",
@@ -503,6 +510,9 @@
     "info": "Инфо",
     "items_count": "{{count}} элемент(ов)",
     "language_choice": "Выберите язык",
+    "last_30_days": "Last 30 days",
+    "last_7_days": "Last 7 days",
+    "last_90_days": "Last 90 days",
     "loading": "Загрузка...",
     "merchant": "Торговец",
     "months_ago": "{{count}} мес. назад",
