--- a/frontend/locales/tr.json
+++ b/frontend/locales/tr.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "abc": {
     "no_revenue": "No revenue generated during this period.",
     "not_enough_data": "Pas assez de données de vente pour l’analyse ABC."
@@ -141,7 +141,14 @@
     },
     "distribution": {
       "country": "Ülkeye göre dağılım",
-      "role": "Role göre kullanıcılar"
+      "plan": "Distribution par plan",
+      "plan_enterprise": "Enterprise",
+      "plan_pro": "Pro",
+      "plan_starter": "Starter",
+      "plan_trial": "Trial",
+      "role": "Role göre kullanıcılar",
+      "signups_today": "Inscriptions aujourd'hui",
+      "trials_expiring": "Trials expirant (7j)"
     },
     "health": {
       "title": "Sistem Sağlığı",
@@ -503,6 +510,9 @@
     "info": "Bilgi",
     "items_count": "{{count}} ürün",
     "language_choice": "Dil Seçin",
+    "last_30_days": "Last 30 days",
+    "last_7_days": "Last 7 days",
+    "last_90_days": "Last 90 days",
     "loading": "Yükleniyor...",
     "merchant": "Esnaf",
     "months_ago": "{{count}} ay önce",
