--- a/frontend/locales/wo.json
+++ b/frontend/locales/wo.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "abc": {
     "no_revenue": "No revenue generated during this period.",
     "not_enough_data": "Pas assez de données de vente pour l’analyse ABC."
@@ -141,7 +141,14 @@
     },
     "distribution": {
       "country": "Seddale ci réew",
-      "role": "Joxe-xam ci ndawal"
+      "plan": "Distribution par plan",
+      "plan_enterprise": "Enterprise",
+      "plan_pro": "Pro",
+      "plan_starter": "Starter",
+      "plan_trial": "Trial",
+      "role": "Joxe-xam ci ndawal",
+      "signups_today": "Inscriptions aujourd'hui",
+      "trials_expiring": "Trials expirant (7j)"
     },
     "health": {
       "title": "Wergu Sistèm",
@@ -503,6 +510,9 @@
     "info": "Xamle",
     "items_count": "{{count}} liggéey",
     "language_choice": "Tann làmmeñ bi",
+    "last_30_days": "Last 30 days",
+    "last_7_days": "Last 7 days",
+    "last_90_days": "Last 90 days",
     "loading": "Xaaral...",
     "merchant": "Jaaykat",
     "months_ago": "{{count}} weer ci gannaaw",
