--- a/web-app/src/locales/fr.json
+++ b/web-app/src/locales/fr.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "abc": {
     "no_revenue": "Aucun revenu généré sur la période.",
     "not_enough_data": "Pas assez de données de vente pour l’analyse ABC."
@@ -315,10 +315,14 @@
     "no_alerts": "No alerts",
     "no_anomalies": "Aucune anomalie détectée",
     "no_rules": "Aucune règle configurée",
-    "rule_dormant": "Dormant product",
-    "rule_low_stock": "Low stock",
-    "rule_out_of_stock": "Out of stock",
-    "rule_overstock": "Overstock",
+    "rule_desc_dormant": "Détecte les produits non vendus depuis 30 jours.",
+    "rule_desc_low_stock": "Alerte quand un produit passe sous un seuil défini.",
+    "rule_desc_out_of_stock": "Alerte immédiate quand la quantité atteint zéro.",
+    "rule_desc_overstock": "Alerte quand le stock dépasse la capacité conseillée.",
+    "rule_dormant": "Produits Dormants",
+    "rule_low_stock": "Stock Faible",
+    "rule_out_of_stock": "Rupture de Stock",
+    "rule_overstock": "Surstockage",
     "rule_update_error": "Could not modify rule",
     "rules_title": "Règles d'alertes",
     "see_less": "Voir moins",
@@ -697,7 +701,10 @@
     "abc_analysis": "Analyse ABC (Priorités)",
     "admin_messages": "Messages de l'administrateur",
     "ai_daily_summary": "Résumé IA du jour",
+    "ai_forecast_title": "Prévisions de Ventes (IA)",
     "ai_tap_to_generate": "Appuyez pour générer",
+    "all_good": "Tout est à jour — aucun problème détecté",
+    "anomalies_detected": "{{count}} anomalies détectées",
     "category_distribution": "Répartition par Catégorie",
     "class_a": "Classe A",
     "class_a_desc": "80% de votre CA",
@@ -705,6 +712,11 @@
     "class_b_desc": "15% de votre CA",
     "class_c": "Classe C",
     "class_c_desc": "5% de votre CA",
+    "col_action": "Action",
+    "col_amount": "Montant",
+    "col_items": "Articles",
+    "col_ref": "Réf.",
+    "col_time": "Heure",
     "count_btn": "Compter",
     "count_stock": "Compter le stock",
     "count_stock_prompt": "Entrez la quantité réelle pour",
@@ -718,33 +730,53 @@
     "expected_qty": "Attendu: {{qty}}",
     "expired": "Périmé !",
     "expiry_alerts": "Alertes Péremption (30j)",
+    "forecast_actual": "Réel",
+    "forecast_confidence": "Confiance : 94%",
+    "forecast_predicted": "Prévu",
     "generate_tasks": "Générer de nouvelles tâches",
     "greeting": "Bonjour, {{name}}",
+    "guide_forecast_content": "Notre IA analyse vos données pour prédire vos ventes futures.",
+    "guide_forecast_title": "Prévisions IA",
+    "guide_kpi_content": "Suivez votre chiffre d'affaires, le nombre de ventes et la valeur de votre stock.",
+    "guide_kpi_title": "Indicateurs Clés (KPI)",
+    "guide_reminders_content": "L'IA vous donne des conseils personnalisés et vous rappelle les actions urgentes.",
+    "guide_welcome_content": "C'est ici que vous pouvez suivre la santé de votre commerce en un coup d'œil.",
+    "guide_welcome_title": "Bienvenue sur votre Dashboard",
     "history": "Historique",
     "history_btn": "Historique",
+    "items_abbrev": "art.",
     "low_stock": "Stock bas",
     "month_revenue": "Ventes mois",
     "movements_30d": "Mouvements (30 jours)",
     "movements_history": "Historique des mouvements",
     "net": "Net",
+    "no_forecast_data": "Pas assez de données de ventes pour générer une prévision",
     "no_movements": "Aucun mouvement",
+    "no_stock_data": "Aucune donnée de stock disponible pour cette période",
     "normal": "Normal",
     "order_btn": "Commander",
     "orders_section": "Commandes",
     "out_of_stock": "Rupture",
     "overstock": "Surstock",
     "pending_orders": "En attente",
+    "period_history": "Historique {{count}}J",
     "preferences_error": "Could not update your preferences.",
     "products_count_one": "{{count}} produit",
     "products_count_other": "{{count}} produits",
     "profitability_analysis": "Analyse de Rentabilité",
     "recent_alerts": "Alertes Récentes",
     "recent_sales": "Ventes Récentes",
+    "reminder_alerts": "{{count}} alerte(s)",
+    "reminder_products": "{{count}} produit(s)",
+    "reminder_products_low": "{{count}} produit(s) sous le seuil",
+    "reminder_products_overstock": "{{count}} produit(s) en excès",
+    "reminder_sales": "{{count}} vente(s)",
     "reorder_stock_meta": "Stock: {{current}} (Seuil: {{threshold}})",
     "reorder_suggested": "Suggéré: +{{qty}}",
     "rotating_inventory": "Inventaire Tournant",
     "see_detail_product": "Voir le détail par produit",
     "see_feature": "See this feature",
+    "see_full_report": "Voir le rapport complet",
     "see_less": "Voir moins",
     "see_more": "Voir plus",
     "see_more_count": "Voir les {{count}} autres produits critiques",
@@ -758,10 +790,12 @@
     "stats": "Statistiques",
     "status_distribution": "Distribution des statuts",
     "stock_by_category": "Stock par catégorie",
+    "stock_distribution": "Répartition des Stocks",
     "stock_evolution": "Evolution Valeur Stock (7j)",
     "stock_label": "Stock",
     "stock_status": "Statut des Stocks",
     "stock_value": "Valeur stock",
+    "stock_value_evolution": "Évolution de la Valeur du Stock",
     "sub_greeting": "Voici l'état de vos stocks",
     "suggestions_reorder": "Suggestions réappro",
     "threshold": "Seuil",
@@ -772,6 +806,9 @@
     "top_products_value": "Top produits (valeur)",
     "total_value": "Valeur totale",
     "units": "unités",
+    "unread_alerts_label": "Alertes non lues",
+    "view_receipt": "Voir le reçu",
+    "visible_sections": "Sections visibles",
     "widget_abc_analysis": "Analyse ABC",
     "widget_category_chart": "Répartition par catégorie",
     "widget_expiry_alerts": "Alertes péremption",
@@ -1802,6 +1839,20 @@
     "users_permissions": "Utilisateurs & Permissions",
     "users_permissions_desc": "Gérez les accès de vos employés",
     "version": "Version"
+  },
+  "sidebar": {
+    "abc_analysis": "Analyses ABC",
+    "expiry": "Péremption",
+    "messages": "Messages",
+    "multi_stores": "Multi-Boutiques",
+    "my_suppliers": "Mes Fournisseurs",
+    "pos": "Ventes (POS)",
+    "staff": "Personnel",
+    "stock_history": "Historique Stock",
+    "stock_inventory": "Stock & Inventaire",
+    "supplier_portal": "Portail Fournisseur",
+    "system": "Système",
+    "system_history": "Historique Système"
   },
   "stock": {
     "reasons": {
