--- a/web-app/src/locales/it.json
+++ b/web-app/src/locales/it.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "abc": {
     "no_revenue": "Nessun ricavo generato in questo periodo.",
     "not_enough_data": "Dati di vendita insufficienti per l'analisi ABC."
@@ -315,6 +315,10 @@
     "no_alerts": "Nessun avviso",
     "no_anomalies": "Nessuna aLast Namealia rilevata",
     "no_rules": "Nessuna regola configurata",
+    "rule_desc_dormant": "Detects products not sold in the last 30 days.",
+    "rule_desc_low_stock": "Alert when a product falls below a defined threshold.",
+    "rule_desc_out_of_stock": "Immediate alert when quantity reaches zero.",
+    "rule_desc_overstock": "Alert when stock exceeds the recommended capacity.",
     "rule_dormant": "Prodotto dormiente",
     "rule_low_stock": "Scorte basse",
     "rule_out_of_stock": "Esaurito",
@@ -503,6 +507,9 @@
     "info": "Info",
     "items_count": "{{count}} articolo/i",
     "language_choice": "Scegli la lingua",
+    "last_30_days": "Ultimi 30 giorni",
+    "last_7_days": "Ultimi 7 giorni",
+    "last_90_days": "Ultimi 90 giorni",
     "loading": "Caricamento...",
     "merchant": "Commerciante",
     "months_ago": "{{count}} months ago",
@@ -542,10 +549,7 @@
     "weeks_ago": "fa {{count}} settimane",
     "years_ago": "fa {{count}} anni",
     "yes": "Sì",
-    "yesterday": "Ieri",
-    "last_7_days": "Ultimi 7 giorni",
-    "last_30_days": "Ultimi 30 giorni",
-    "last_90_days": "Ultimi 90 giorni"
+    "yesterday": "Ieri"
   },
   "crm": {
     "active_30d": "Attivi (30g)",
@@ -697,7 +701,10 @@
     "abc_analysis": "Analisi ABC (Priorità)",
     "admin_messages": "Messaggi dell'amministratore",
     "ai_daily_summary": "AI Daily Summary",
+    "ai_forecast_title": "AI Sales Forecast",
     "ai_tap_to_generate": "Tap to generate",
+    "all_good": "Everything is up to date — no issues detected",
+    "anomalies_detected": "{{count}} anomalies detected",
     "category_distribution": "Distribuzione per Categoria",
     "class_a": "Class A",
     "class_a_desc": "80% del tuo fatturato",
@@ -705,6 +712,11 @@
     "class_b_desc": "15% del tuo fatturato",
     "class_c": "Class C",
     "class_c_desc": "5% del tuo fatturato",
+    "col_action": "Action",
+    "col_amount": "Amount",
+    "col_items": "Items",
+    "col_ref": "Ref.",
+    "col_time": "Time",
     "count_btn": "Conta",
     "count_stock": "Conta le scorte",
     "count_stock_prompt": "Inserisci la quantità reale per",
@@ -718,33 +730,53 @@
     "expected_qty": "Attendu: {{qty}}",
     "expired": "Scaduto!",
     "expiry_alerts": "Avvisi Scadenza (30g)",
+    "forecast_actual": "Actual",
+    "forecast_confidence": "Confidence: 94%",
+    "forecast_predicted": "Forecast",
     "generate_tasks": "Genera nuove attività",
     "greeting": "Ciao, {{name}}",
+    "guide_forecast_content": "Our AI analyses your data to predict future sales.",
+    "guide_forecast_title": "AI Forecast",
+    "guide_kpi_content": "Track your revenue, sales count and stock value in real time.",
+    "guide_kpi_title": "Key Indicators (KPI)",
+    "guide_reminders_content": "Get personalised AI advice and urgent action reminders.",
+    "guide_welcome_content": "Monitor your business health at a glance.",
+    "guide_welcome_title": "Welcome to your Dashboard",
     "history": "History",
     "history_btn": "Storico",
+    "items_abbrev": "items",
     "low_stock": "Scorte basse",
     "month_revenue": "Vendite mensili",
     "movements_30d": "Movimenti (30 giorni)",
     "movements_history": "Storico dei movimenti",
     "net": "Netto",
+    "no_forecast_data": "Not enough sales data to generate a forecast",
     "no_movements": "Nessun movimento",
+    "no_stock_data": "No stock data available for this period",
     "normal": "Normale",
     "order_btn": "Ordina",
     "orders_section": "Ordini",
     "out_of_stock": "Esaurito",
     "overstock": "Eccedenza",
     "pending_orders": "In attesa",
+    "period_history": "{{count}}d history",
     "preferences_error": "Impossibile aggiornare le tue preferenze.",
     "products_count_one": "{{count}} prodotto",
     "products_count_other": "{{count}} prodotti",
     "profitability_analysis": "Analisi redditività",
     "recent_alerts": "Avvisi recenti",
     "recent_sales": "Vendite recenti",
+    "reminder_alerts": "{{count}} alert(s)",
+    "reminder_products": "{{count}} product(s)",
+    "reminder_products_low": "{{count}} product(s) below threshold",
+    "reminder_products_overstock": "{{count}} product(s) in excess",
+    "reminder_sales": "{{count}} sale(s)",
     "reorder_stock_meta": "Stock: {{current}} (Seuil: {{threshold}})",
     "reorder_suggested": "Suggéré: +{{qty}}",
     "rotating_inventory": "Inventario a Rotazione",
     "see_detail_product": "Vedi il dettaglio per prodotto",
     "see_feature": "Vedi questa funzionalità",
+    "see_full_report": "See full report",
     "see_less": "Vedi meno",
     "see_more": "Vedi di più",
     "see_more_count": "Vedi altri {{count}} prodotti critici",
@@ -758,10 +790,12 @@
     "stats": "Statistics",
     "status_distribution": "Distribuzione degli stati",
     "stock_by_category": "Scorte per categoria",
+    "stock_distribution": "Stock Distribution",
     "stock_evolution": "Evoluzione valore scorte (7g)",
     "stock_label": "Scorte",
     "stock_status": "Stato scorte",
     "stock_value": "Valore scorte",
+    "stock_value_evolution": "Stock Value Evolution",
     "sub_greeting": "Ecco lo stato delle tue scorte",
     "suggestions_reorder": "Reorder Suggestions",
     "threshold": "Soglia",
@@ -772,6 +806,9 @@
     "top_products_value": "Top prodotti (valore)",
     "total_value": "Valore totale",
     "units": "unità",
+    "unread_alerts_label": "Unread alerts",
+    "view_receipt": "View receipt",
+    "visible_sections": "Visible sections",
     "widget_abc_analysis": "Analyse ABC",
     "widget_category_chart": "Répartition par catégorie",
     "widget_expiry_alerts": "Alertes péremption",
@@ -1847,6 +1884,20 @@
     "users_permissions": "Utenti e Permessi",
     "users_permissions_desc": "Gestisci gli accessi dei tuoi dipendenti",
     "version": "Versione"
+  },
+  "sidebar": {
+    "abc_analysis": "ABC Analysis",
+    "expiry": "Expiry",
+    "messages": "Messages",
+    "multi_stores": "Multi-Stores",
+    "my_suppliers": "My Suppliers",
+    "pos": "Sales (POS)",
+    "staff": "Staff",
+    "stock_history": "Stock History",
+    "stock_inventory": "Stock & Inventory",
+    "supplier_portal": "Supplier Portal",
+    "system": "System",
+    "system_history": "System History"
   },
   "stock": {
     "reasons": {
