--- a/web-app/src/locales/ru.json
+++ b/web-app/src/locales/ru.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "abc": {
     "no_revenue": "No revenue generated during this period.",
     "not_enough_data": "Pas assez de données de vente pour l’analyse ABC."
@@ -315,6 +315,10 @@
     "no_alerts": "Нет уведомлений",
     "no_anomalies": "Аномалий не обнаружено",
     "no_rules": "Правила не настроены",
+    "rule_desc_dormant": "Detects products not sold in the last 30 days.",
+    "rule_desc_low_stock": "Alert when a product falls below a defined threshold.",
+    "rule_desc_out_of_stock": "Immediate alert when quantity reaches zero.",
+    "rule_desc_overstock": "Alert when stock exceeds the recommended capacity.",
     "rule_dormant": "Залежавшийся товар",
     "rule_low_stock": "Низкий запас",
     "rule_out_of_stock": "Нет в наличии",
@@ -503,6 +507,9 @@
     "info": "Инфо",
     "items_count": "{{count}} элемент(ов)",
     "language_choice": "Выберите язык",
+    "last_30_days": "Последние 30 дней",
+    "last_7_days": "Последние 7 дней",
+    "last_90_days": "Последние 90 дней",
     "loading": "Загрузка...",
     "merchant": "Торговец",
     "months_ago": "{{count}} мес. назад",
@@ -542,10 +549,7 @@
     "weeks_ago": "{{count}} нед. назад",
     "years_ago": "{{count}} г. назад",
     "yes": "Да",
-    "yesterday": "Вчера",
-    "last_7_days": "Последние 7 дней",
-    "last_30_days": "Последние 30 дней",
-    "last_90_days": "Последние 90 дней"
+    "yesterday": "Вчера"
   },
   "crm": {
     "active_30d": "Активны (30д)",
@@ -697,7 +701,10 @@
     "abc_analysis": "ABC-анализ (приоритеты)",
     "admin_messages": "Сообщения администратора",
     "ai_daily_summary": "Сводка ИИ за день",
+    "ai_forecast_title": "AI Sales Forecast",
     "ai_tap_to_generate": "Нажмите для генерации",
+    "all_good": "Everything is up to date — no issues detected",
+    "anomalies_detected": "{{count}} anomalies detected",
     "category_distribution": "Распределение по категориям",
     "class_a": "Класс A",
     "class_a_desc": "80% вашей выручки",
@@ -705,6 +712,11 @@
     "class_b_desc": "15% вашей выручки",
     "class_c": "Класс C",
     "class_c_desc": "5% вашей выручки",
+    "col_action": "Action",
+    "col_amount": "Amount",
+    "col_items": "Items",
+    "col_ref": "Ref.",
+    "col_time": "Time",
     "count_btn": "Счет",
     "count_stock": "Инвентаризация",
     "count_stock_prompt": "Введите факт. количество для",
@@ -718,33 +730,53 @@
     "expected_qty": "Attendu: {{qty}}",
     "expired": "Истек срок!",
     "expiry_alerts": "Срок годности (30д)",
+    "forecast_actual": "Actual",
+    "forecast_confidence": "Confidence: 94%",
+    "forecast_predicted": "Forecast",
     "generate_tasks": "Создать новые задачи",
     "greeting": "Здравствуйте, {{name}}",
+    "guide_forecast_content": "Our AI analyses your data to predict future sales.",
+    "guide_forecast_title": "AI Forecast",
+    "guide_kpi_content": "Track your revenue, sales count and stock value in real time.",
+    "guide_kpi_title": "Key Indicators (KPI)",
+    "guide_reminders_content": "Get personalised AI advice and urgent action reminders.",
+    "guide_welcome_content": "Monitor your business health at a glance.",
+    "guide_welcome_title": "Welcome to your Dashboard",
     "history": "History",
     "history_btn": "История",
+    "items_abbrev": "items",
     "low_stock": "Мало на складе",
     "month_revenue": "Продажи за месяц",
     "movements_30d": "Движения (30 дней)",
     "movements_history": "История движений",
     "net": "Чистый",
+    "no_forecast_data": "Not enough sales data to generate a forecast",
     "no_movements": "Нет движений",
+    "no_stock_data": "No stock data available for this period",
     "normal": "В норме",
     "order_btn": "Заказать",
     "orders_section": "Заказы",
     "out_of_stock": "Нет в наличии",
     "overstock": "Избыток",
     "pending_orders": "В ожидании",
+    "period_history": "{{count}}d history",
     "preferences_error": "Не удалось обновить настройки.",
     "products_count_one": "{{count}} товар",
     "products_count_other": "Товаров: {{count}}",
     "profitability_analysis": "Анализ рентабельности",
     "recent_alerts": "Последние уведомления",
     "recent_sales": "Последние продажи",
+    "reminder_alerts": "{{count}} alert(s)",
+    "reminder_products": "{{count}} product(s)",
+    "reminder_products_low": "{{count}} product(s) below threshold",
+    "reminder_products_overstock": "{{count}} product(s) in excess",
+    "reminder_sales": "{{count}} sale(s)",
     "reorder_stock_meta": "Stock: {{current}} (Seuil: {{threshold}})",
     "reorder_suggested": "Suggéré: +{{qty}}",
     "rotating_inventory": "Скользящая инвентаризация",
     "see_detail_product": "Подробнее по товарам",
     "see_feature": "Узнать об этой функции",
+    "see_full_report": "See full report",
     "see_less": "Показать меньше",
     "see_more": "Показать больше",
     "see_more_count": "Показать остальные {{count}} крит. товаров",
@@ -758,10 +790,12 @@
     "stats": "Статистика",
     "status_distribution": "Распределение по статусам",
     "stock_by_category": "Запасы по категориям",
+    "stock_distribution": "Stock Distribution",
     "stock_evolution": "Динамика стоимости запасов (7д)",
     "stock_label": "Запас",
     "stock_status": "Состояние запасов",
     "stock_value": "Стоимость запасов",
+    "stock_value_evolution": "Stock Value Evolution",
     "sub_greeting": "Состояние вашего склада",
     "suggestions_reorder": "Советы по пополнению",
     "threshold": "Порог",
@@ -772,6 +806,9 @@
     "top_products_value": "Топ товаров (по стоимости)",
     "total_value": "Общая стоимость",
     "units": "ед.",
+    "unread_alerts_label": "Unread alerts",
+    "view_receipt": "View receipt",
+    "visible_sections": "Visible sections",
     "widget_abc_analysis": "Analyse ABC",
     "widget_category_chart": "Répartition par catégorie",
     "widget_expiry_alerts": "Alertes péremption",
@@ -1233,14 +1270,14 @@
     "price_range": "Диапазон цен",
     "products": "Товары",
     "reset": "Сбросить",
+    "search_placeholder": "Search for products or suppliers...",
     "search_product": "Поиск товара...",
     "search_supplier": "Поиск поставщика...",
     "send_invitation": "Отправить приглашение",
     "star": "⭐",
     "suppliers": "Поставщики маркетплейса",
     "title": "Маркетплейс",
-    "verified_only": "Только проверенные",
-    "search_placeholder": "Search for products or suppliers..."
+    "verified_only": "Только проверенные"
   },
   "modals": {
     "cancel": "Отмена",
@@ -1809,6 +1846,20 @@
     "users_permissions_desc": "Управляйте доступом своих сотрудников",
     "version": "Версия"
   },
+  "sidebar": {
+    "abc_analysis": "ABC Analysis",
+    "expiry": "Expiry",
+    "messages": "Messages",
+    "multi_stores": "Multi-Stores",
+    "my_suppliers": "My Suppliers",
+    "pos": "Sales (POS)",
+    "staff": "Staff",
+    "stock_history": "Stock History",
+    "stock_inventory": "Stock & Inventory",
+    "supplier_portal": "Supplier Portal",
+    "system": "System",
+    "system_history": "System History"
+  },
   "stock": {
     "reasons": {
       "pos_sale": "POS Sale",
@@ -1908,24 +1959,24 @@
     "dashboard": "Панель поставщика",
     "delivery_zones": "Зоны доставки",
     "min_order": "Мин. заказ",
-    "order_id": "Код заказа",
-    "orders": "Полученные заказы",
-    "pending_orders": "Заказы в ожидании",
-    "refuse": "Отклонить",
-    "revenue_month": "Выручка за месяц",
-    "reviews": "Отзывы клиентов",
-    "ship": "Отправить",
-    "top_products": "Топ товаров",
-    "unavailable": "Нет в наличии",
     "no_orders": "No orders found",
     "order_date": "Order Date",
     "order_details": "Order Details",
+    "order_id": "Код заказа",
     "order_items": "Items",
     "order_status": "Status",
     "order_summary": "Summary",
     "order_total": "Total",
+    "orders": "Полученные заказы",
     "orders_history": "Order History",
-    "search_orders": "Search orders..."
+    "pending_orders": "Заказы в ожидании",
+    "refuse": "Отклонить",
+    "revenue_month": "Выручка за месяц",
+    "reviews": "Отзывы клиентов",
+    "search_orders": "Search orders...",
+    "ship": "Отправить",
+    "top_products": "Топ товаров",
+    "unavailable": "Нет в наличии"
   },
   "supplier_old": {
     "active_clients": "Активные клиенты",
@@ -1951,6 +2002,8 @@
     "commercial_profile": "Profil commercial",
     "company_name_label": "Company Name *",
     "company_name_ph": "Company Name",
+    "contact_email": "Contact Email",
+    "contact_phone": "Contact Phone",
     "create_profile": "Create Profile",
     "days": "days",
     "description_label": "Description",
@@ -1973,9 +2026,7 @@
     "reviews": "avis",
     "role_supplier": "Supplier",
     "zones_label": "Delivery Zones (comma separated)",
-    "zones_ph": "City center, suburb...",
-    "contact_email": "Contact Email",
-    "contact_phone": "Contact Phone"
+    "zones_ph": "City center, suburb..."
   },
   "suppliers": {
     "add_invoice_feature": "Функция загрузки скоро появится",
